# CarValue

./: CMakeLists.txt  project.bat
data/: rust_protection.csv
data/trafi/: 2000_2011.csv  2000_2012.csv  2000_2013.csv  2000_2014.csv  2000_2015.csv  2001_2011.csv  2001_2012.csv  2001_2013.csv  2001_2014.csv  2001_2015.csv  2002_2011.csv  2002_2012.csv  2002_2013.csv  2002_2014.csv  2002_2015.csv  2003_2011.csv  2003_2012.csv  2003_2013.csv  2003_2014.csv  2003_2015.csv  2004_2011.csv  2004_2012.csv  2004_2013.csv  2004_2014.csv  2004_2015.csv  2005_2011.csv  2005_2012.csv  2005_2013.csv  2005_2014.csv  2005_2015.csv  2006_2011.csv  2006_2012.csv  2006_2013.csv  2006_2014.csv  2006_2015.csv  2007_2012.csv  2007_2013.csv  2007_2014.csv  2007_2015.csv  2008_2011.csv  (+10 more)
src/: Brand.cpp  Brand.h  Brands.cpp  Brands.h  CMakeLists.txt  CarValueApplication.cpp  CarValueApplication.h  CarValueWindow.cpp  CarValueWindow.h  CarValueWindow.ui  CsvParser.cpp  CsvParser.h  Model.cpp  NettiautoFetcher.cpp  NettiautoFetcher.h  main.cpp
